UI changes for address alignment issue fixed

--- a/src/css/Hompage.css
+++ b/src/css/Hompage.css
@@ -137,7 +137,7 @@ html, body {
 }
 #btn-submit-container{
   width: 300px;
-  margin-top: -95px;
+  margin-top: -105px;
 }
 #btn-submit-container button {
     background: #4dadf7;
@@ -230,6 +230,9 @@ html, body {
     float: left;
     margin: 13px 0px 13px 70px;
 }
+.pac-container{
+  width: 275px !important; 
+}
 .scenario_option{
   float: right;
     margin: 3px 5px 0px 0px;
@@ -237,6 +240,21 @@ html, body {
 .scenario_val{
   width: 130px !important;
   margin: 0 10px;
+  display: inline-block;
+}
+.scenario_val .autoComplete{
+ width: 130px !important;
+ text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  border-width: 1px !important;
+}
+
+.scenario_val.focus_auto_address .autoBorder ,.scenario_val .autoComplete_placeholder{
+  width: 130px !important;
+  left: 0 !important;
+  text-align: left;
+
 }
 .profile_val{
   width: 130px !important;
@@ -248,10 +266,10 @@ html, body {
 
 #car-panel {
     width: calc(100% - 300px);
-    height: 75px;
+    height: 90px;
     margin-top: 5px;
     position: relative;
-    
+
 }
 
 .car_active .new_car_copy{
